force-app/main/default/objects/Directive_Rule__mdt/Directive_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Directive Rule</label>
    <pluralLabel>Directive Rules</pluralLabel>
</CustomObject>