force-app/main/default/objects/Directive_Rule__mdt/fields/Condition_Key__c.field-meta.xml
<CustomField>
    <fullName>Condition_Key__c</fullName>
    <label>Condition Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>