force-app/main/default/objects/Directive_Rule__mdt/fields/Condition_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Condition_Strategy__c</fullName>
    <label>Condition Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Apex</fullName><default>false</default><label>Apex</label></value>
            <value><fullName>Flow</fullName><default>false</default><label>Flow</label></value>
            <value><fullName>Formula</fullName><default>false</default><label>Formula</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>