force-app/main/default/objects/Directive_Rule__mdt/fields/Evaluation_Type__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Type__c</fullName>
    <label>Evaluation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Transaction</fullName><default>false</default><label>Transaction</label></value>
            <value><fullName>Scheduled</fullName><default>false</default><label>Scheduled</label></value>
            <value><fullName>Aggregated</fullName><default>false</default><label>Aggregated</label></value>
            <value><fullName>AI</fullName><default>false</default><label>AI</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>