force-app/main/default/objects/Directive_Rule__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>