force-app/main/default/objects/Directive_Rule__mdt/fields/Priority_Base__c.field-meta.xml
<CustomField>
    <fullName>Priority_Base__c</fullName>
    <label>Priority Base</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>