force-app/main/default/objects/Directive_Rule__mdt/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>